[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "TheCellScouts"
description = "Scout yo cells."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "sammyhansali@gmail.com ", name = "Sammy Hansali " },
]
dynamic = ["version"]
dependencies = [
    # Add your requirements here
]